--- a/4-Hyperparameteropt.ipynb
+++ b/4-Hyperparameteropt.ipynb
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "z-B_X95QJR-l",
         "colab_type": "code",
-        "outputId": "95b79459-b4a7-46ab-d108-ba7a3bc4d594",
+        "outputId": "564ab656-1ceb-4bd6-b839-0fbf899cbcb7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 245
@@ -49,20 +49,20 @@
       "source": [
         "pip install scikit-optimize"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting scikit-optimize\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5c/87/310b52debfbc0cb79764e5770fa3f5c18f6f0754809ea9e2fc185e1b67d3/scikit_optimize-0.7.4-py2.py3-none-any.whl (80kB)\n",
-            "\r\u001b[K     |████                            | 10kB 17.0MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 20kB 1.9MB/s eta 0:00:01\r\u001b[K     |████████████▎                   | 30kB 2.5MB/s eta 0:00:01\r\u001b[K     |████████████████▎               | 40kB 1.8MB/s eta 0:00:01\r\u001b[K     |████████████████████▍           | 51kB 2.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████▌       | 61kB 2.5MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▌   | 71kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 81kB 2.5MB/s \n",
+            "\r\u001b[K     |████                            | 10kB 18.8MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 20kB 1.7MB/s eta 0:00:01\r\u001b[K     |████████████▎                   | 30kB 2.3MB/s eta 0:00:01\r\u001b[K     |████████████████▎               | 40kB 1.7MB/s eta 0:00:01\r\u001b[K     |████████████████████▍           | 51kB 1.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████▌       | 61kB 2.2MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▌   | 71kB 2.4MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 81kB 2.0MB/s \n",
             "\u001b[?25hRequirement already satisfied: scipy>=0.18.0 in /usr/local/lib/python3.6/dist-packages (from scikit-optimize) (1.4.1)\n",
-            "Collecting pyaml>=16.9\n",
-            "  Downloading https://files.pythonhosted.org/packages/35/1e/eda9fe07f752ced7afcef590e7d74390f0d9c9c0b7ff98317afbaa0697e3/pyaml-19.12.0-py2.py3-none-any.whl\n",
             "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/dist-packages (from scikit-optimize) (1.17.5)\n",
             "Requirement already satisfied: scikit-learn>=0.19.1 in /usr/local/lib/python3.6/dist-packages (from scikit-optimize) (0.22.1)\n",
             "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-optimize) (0.14.1)\n",
+            "Collecting pyaml>=16.9\n",
+            "  Downloading https://files.pythonhosted.org/packages/35/1e/eda9fe07f752ced7afcef590e7d74390f0d9c9c0b7ff98317afbaa0697e3/pyaml-19.12.0-py2.py3-none-any.whl\n",
             "Requirement already satisfied: PyYAML in /usr/local/lib/python3.6/dist-packages (from pyaml>=16.9->scikit-optimize) (3.13)\n",
             "Installing collected packages: pyaml, scikit-optimize\n",
             "Successfully installed pyaml-19.12.0 scikit-optimize-0.7.4\n"
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "9YHuBcwLJFwh",
         "colab_type": "code",
-        "outputId": "be1e40a0-7398-4936-b9d9-8171fadc1ed0",
+        "outputId": "59ef7e05-0793-4846-bded-f15b80fef5df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 124
@@ -110,7 +110,7 @@
         "\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "GLQxmWQyJfHp",
         "colab_type": "code",
-        "outputId": "c5e276c4-733c-4ad3-a4d2-00c7856f94e8",
+        "outputId": "fe4da819-e8d2-488d-9d2f-dcb84a175bd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 305
@@ -140,7 +140,7 @@
         "df = pd.read_csv('/content/gdrive/My Drive/Colab Notebooks/datasets/MLready-lc.csv', index_col='id')\n",
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1152,10 +1152,10 @@
       "metadata": {
         "id": "vv96kcZt0okr",
         "colab_type": "code",
-        "outputId": "122e7c39-6de1-47da-8def-ee4733e09c92",
+        "outputId": "2227a279-24f4-4dda-b5b3-a3f6adde56ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 50
+          "height": 52
         }
       },
       "source": [
@@ -1163,7 +1163,7 @@
         "print(f'Baseline CV ROC AUC scores: {baseroc_cv_scores}')\n",
         "print(f'Baseline mean ROC AUC scores: {baseroc_cv_scores.mean()}')"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1692,7 +1692,7 @@
         "colab": {}
       },
       "source": [
-        "rocclf = lgb.LGBMClassifier(learning_rate=0.082415, max_depth=30, num_leaves=100, min_data_in_leaf=1000, \n",
+        "rocclf = lgb.LGBMClassifier(learning_rate=0.096394, max_depth=30, num_leaves=100, min_data_in_leaf=1000, \n",
         "                            feature_fraction=1, subsample=.1)"
       ],
       "execution_count": 0,
@@ -1703,7 +1703,11 @@
       "metadata": {
         "id": "-l4RqlNuPsGZ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "50c6ad37-a172-4c02-fe1f-df1ead8abb13"
       },
       "source": [
         "roc_cv_scores = cross_val_score(rocclf, X_train, y_train, cv=5, scoring='roc_auc')\n",
@@ -1711,8 +1715,18 @@
         "print(f'ROC CV mean scores: {roc_cv_scores.mean()}')\n",
         "print(f'Our mean ROC AUC score improved by {roc_cv_scores.mean() - baseroc_cv_scores.mean()}')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ROC CV scores: [0.96012972 0.95968179 0.95972387 0.95994962 0.95941812]\n",
+            "ROC CV mean scores: 0.9597806259628487\n",
+            "Our mean ROC AUC score improved by 0.000422546450707606\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1742,15 +1756,28 @@
       "metadata": {
         "id": "APkSsj2T6etR",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "adf7b33f-4866-4835-cb2d-a742779bc01b"
       },
       "source": [
         "base_f1cv_scores = cross_val_score(baseclf, X_train, y_train, cv=5, scoring='f1')\n",
         "print(f'Baseline CV F1 scores: {base_f1cv_scores}')\n",
         "print(f'Baseline mean F1 scores: {base_f1cv_scores.mean()}')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Baseline CV F1 scores: [0.74892568 0.74809997 0.74877263 0.75173346 0.74817737]\n",
+            "Baseline mean F1 scores: 0.7491418214630101\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1833,7 +1860,11 @@
       "metadata": {
         "id": "jl3o3EUcrEji",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "691ac9a5-2311-4c08-815a-4101efa2be16"
       },
       "source": [
         "f1clf_cv_scores = cross_val_score(f1clf, X_train, y_train, cv=5, scoring='f1')\n",
@@ -1841,8 +1872,18 @@
         "print(f'F1 Classifier mean F1 scores: {f1clf_cv_scores.mean()}')\n",
         "print(f'Our mean F1 score improved by {f1clf_cv_scores.mean() - base_f1cv_scores.mean()}')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "F1 Classifier CV F1 scores: [0.74263706 0.73967295 0.74062307 0.74484    0.74384724]\n",
+            "F1 Classifier mean F1 scores: 0.7423240620005428\n",
+            "Our mean F1 score improved by -0.006817759462467321\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1870,9 +1911,52 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "sPLfTZJ9wGie",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 243
+        },
+        "outputId": "4ef276e3-4e4c-4b1d-d13f-1da504a0e725"
+      },
+      "source": [
+        "baseclf = lgb.LGBMClassifier()\n",
+        "baseclf.fit(X_train, y_train)\n",
+        "\n",
+        "print (\"\\n\\n ---Gradient Boosting Model---\")\n",
+        "base_roc_auc = roc_auc_score(y_test, baseclf.predict(X_test))\n",
+        "print (\"Gradient Boosting AUC = %2.2f\" % base_roc_auc)\n",
+        "print(classification_report(y_test, baseclf.predict(X_test), digits=4))"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            " ---Gradient Boosting Model---\n",
+            "Gradient Boosting AUC = 0.85\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0     0.9587    0.9566    0.9576    211463\n",
+            "           1     0.7427    0.7524    0.7475     35214\n",
+            "\n",
+            "    accuracy                         0.9275    246677\n",
+            "   macro avg     0.8507    0.8545    0.8526    246677\n",
+            "weighted avg     0.9279    0.9275    0.9276    246677\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "NCmcdDn3uokI",
         "colab_type": "code",
-        "outputId": "96516aaf-6657-4107-8162-a72561f73713",
+        "outputId": "4492c830-aba0-4419-e524-2e4adb8afc35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -1886,9 +1970,9 @@
         "print (\"\\n\\n ---Gradient Boosting Model---\")\n",
         "f1_roc_auc = roc_auc_score(y_test, f1clf.predict(X_test))\n",
         "print (\"Gradient Boosting AUC = %2.2f\" % f1_roc_auc)\n",
-        "print(classification_report(y_test, f1clf.predict(X_test)))"
+        "print(classification_report(y_test, f1clf.predict(X_test), digits=4))"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1899,12 +1983,12 @@
             "Gradient Boosting AUC = 0.85\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.96      0.96      0.96    211463\n",
-            "           1       0.74      0.75      0.74     35214\n",
+            "           0     0.9577    0.9563    0.9570    211463\n",
+            "           1     0.7396    0.7462    0.7429     35214\n",
             "\n",
-            "    accuracy                           0.93    246677\n",
-            "   macro avg       0.85      0.85      0.85    246677\n",
-            "weighted avg       0.93      0.93      0.93    246677\n",
+            "    accuracy                         0.9263    246677\n",
+            "   macro avg     0.8487    0.8512    0.8499    246677\n",
+            "weighted avg     0.9266    0.9263    0.9264    246677\n",
             "\n"
           ],
           "name": "stdout"
@@ -1916,23 +2000,23 @@
       "metadata": {
         "id": "8mZAeCfb_drL",
         "colab_type": "code",
-        "outputId": "b92712a4-3374-4596-ba0d-ac6c7083b895",
+        "outputId": "308ebb0f-5d7e-410c-9063-051707d47381",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
         }
       },
       "source": [
-        "rocclf = lgb.LGBMClassifier(learning_rate=0.082415, max_depth=30, num_leaves=100, min_data_in_leaf=1000, \n",
+        "rocclf = lgb.LGBMClassifier(learning_rate=0.096394, max_depth=30, num_leaves=100, min_data_in_leaf=1000, \n",
         "                            feature_fraction=1, subsample=.1)\n",
         "rocclf.fit(X_train, y_train)\n",
         "\n",
         "print (\"\\n\\n ---Gradient Boosting Model---\")\n",
         "roc_roc_auc = roc_auc_score(y_test, rocclf.predict(X_test))\n",
         "print (\"Gradient Boosting AUC = %2.2f\" % f1_roc_auc)\n",
-        "print(classification_report(y_test, rocclf.predict(X_test)))"
+        "print(classification_report(y_test, rocclf.predict(X_test), digits=4))"
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1943,12 +2027,12 @@
             "Gradient Boosting AUC = 0.85\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.96      0.96      0.96    211463\n",
-            "           1       0.74      0.75      0.75     35214\n",
+            "           0     0.9587    0.9568    0.9577    211463\n",
+            "           1     0.7435    0.7526    0.7480     35214\n",
             "\n",
-            "    accuracy                           0.93    246677\n",
-            "   macro avg       0.85      0.85      0.85    246677\n",
-            "weighted avg       0.93      0.93      0.93    246677\n",
+            "    accuracy                         0.9276    246677\n",
+            "   macro avg     0.8511    0.8547    0.8529    246677\n",
+            "weighted avg     0.9280    0.9276    0.9278    246677\n",
             "\n"
           ],
           "name": "stdout"
