Code cleaned, report updated

--- a/1 - Data Cleaning.ipynb
+++ b/1 - Data Cleaning.ipynb
@@ -35,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hunte\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3049: DtypeWarning: Columns (19,59,118) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\hunte\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (19,59,118) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
       "C:\\Users\\hunte\\Anaconda3\\lib\\site-packages\\numpy\\lib\\arraysetops.py:569: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
       "  mask |= (ar1 == a)\n"
@@ -1505,7 +1505,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('datasets/after3yearscut-lc.csv', index_col='id')\n",
+    "df = pd.read_csv('datasets/3years.csv', index_col='id')\n",
     "df.head()"
    ]
   },
@@ -1741,12 +1741,15 @@
    "outputs": [],
    "source": [
     "def experience_convert(s):\n",
+    "    #any row that contains a less than sign in this dataframe is < 1 year which we will call 0.\n",
     "    if '<' in s:\n",
-    "        return 0 #any row that contains a less than sign in this dataframe is < 1 year which we will call 0.\n",
+    "        return 0 \n",
+    "    #any row that's 10+ is just going to become a 10. \n",
     "    elif '10+' in s:\n",
-    "        return 10 #any row that's 10+ is just going to become a 10. \n",
+    "        return 10  \n",
     "    else:\n",
-    "        for i in range(0,10): #If any number from 0-9 is contained in the row, it will become just that integer. \n",
+    "        #If any number from 0-9 is contained in the row, it will become just that integer. \n",
+    "        for i in range(0,10): \n",
     "            if str(i) in s:\n",
     "                return i"
    ]
@@ -1877,9 +1880,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "termlist = [] #initiating an empty list. \n",
+    "#initiating an empty list. \n",
+    "termlist = []  \n",
     "for i in df['term']:\n",
-    "    termlist.append(int(i[:3])) #only need the first 2 strings in each row since every entry is either \"36 months\" or \"60 months\""
+    "    #only need the first 2 strings in each row since every entry is either \"36 months\" or \"60 months\"\n",
+    "    termlist.append(int(i[:3]))"
    ]
   },
   {
@@ -1978,9 +1983,12 @@
     }
    ],
    "source": [
-    "missing = df.isna().sum() #sum the missing values for each column\n",
-    "missing = missing[missing > 0] #remove all columns that have 0 missing values\n",
-    "missingpercent = missing/len(df)*100 #converting our list to percentages as well. \n",
+    "#sum the missing values for each column\n",
+    "missing = df.isna().sum() \n",
+    "#remove all columns that have 0 missing values\n",
+    "missing = missing[missing > 0] \n",
+    "#converting our list to percentages as well. \n",
+    "missingpercent = missing/len(df)*100 \n",
     "print(missing)\n",
     "print(missingpercent)"
    ]
@@ -2162,7 +2170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#imputing 999 in these features\n",
+    "#imputing -999 in these features\n",
     "for i in nineninelist:\n",
     "    df[i].fillna(-999, inplace=True)"
    ]
@@ -2207,6 +2215,15 @@
     "missing = df.isna().sum()\n",
     "missing = (missing[missing > 0]/len(df))*100\n",
     "missing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.to_csv('datasets/cleaned.csv')"
    ]
   },
   {
